--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
+
+  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
+
 </head>
 <body>
 
@@ -58,9 +62,43 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  // listen to keydown event
+
+  function removeTransition(e){
+    if(e.propertyName !== 'transform') return;
+
+    this.classList.remove('playing');
+  }
+
+  function playSound(e){
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+
+    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+
+    key.classList.add('playing');
+
+    if(!audio) return;
+    audio.currentTime = 0;
+    audio.play();
+  }
+
+
+  window.addEventListener('keydown', playSound);
+
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition))
+
+
 
 </script>
 
 
 </body>
+
+
+
+
+
+
 </html>
