--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -24,6 +24,7 @@
     .panels {
       min-height:100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -41,6 +42,13 @@
       font-size: 20px;
       background-size:cover;
       background-position:center;
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+
+
     }
 
 
@@ -54,6 +62,19 @@
       margin:0;
       width: 100%;
       transition:transform 0.5s;
+      border: 1px solid red;
+      flex: 1 0 auto;
+    }
+
+    .panel > *:first-child{transform: translateY(-100%);}
+    .panel.active-open > *:first-child{
+      transform: translateY(0);
+    }
+
+
+    .panel > *:last-child{transform: translateY(100%);}
+    .panel.active-open > *:last-child{
+      transform: translateY(0);
     }
 
     .panel p {
@@ -68,6 +89,7 @@
 
     .panel.open {
       font-size:40px;
+      flex: 5;
     }
 
   </style>
@@ -102,6 +124,27 @@
   </div>
 
   <script>
+
+    // Select all panels --> returns nodelist
+    const panels = document.querySelectorAll('.panel');
+
+    function toggleOpen(){
+      this.classList.toggle('open');
+    }
+
+    function toggleActive(e){
+      
+      if(e.propertyName.includes('flex')){
+        this.classList.toggle('active-open');
+      }
+
+    }
+
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
+
+
+
 
   </script>
 
