--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -62,7 +62,26 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  // listen to keydown event
+
+  document.addEventListener('keydown', (e) => {
+    const audio = document.querySelector(`audio[data-key="${e.keycode}"]`);
+    const key = document.querySelector(`.key[data-key="${e.keycode}"]`);
+    key.classList.add('playing');
+
+
+
+    if (!audio) return;
+    audio.currentTime = 0;
+    audio.play();
+
+
+    const keys = document.querySelectorAll('.key');
+
+    keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
+
+
+  })
 
   function removeTransition(e){
     if(e.propertyName !== 'transform') return;
@@ -70,24 +89,9 @@
     this.classList.remove('playing');
   }
 
-  function playSound(e){
-    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
-
-    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
-
-    key.classList.add('playing');
-
-    if(!audio) return;
-    audio.currentTime = 0;
-    audio.play();
-  }
 
 
-  window.addEventListener('keydown', playSound);
 
-
-  const keys = document.querySelectorAll('.key');
-  keys.forEach(key => key.addEventListener('transitionend', removeTransition))
 
 
 
