--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -64,8 +64,8 @@
       top:50%;
       transform: rotate(90deg);
       transform-origin: 100%;
-      /* transition: all 0.05s;
-      transition-timing-function: ease-in; */
+      transition: all 0.05s;
+      transition-timing-function: ease-in;
 
     }
 
@@ -73,32 +73,36 @@
 
   <script>
 
-  const secondHand = document.querySelector('.second-hand');
-  const minuteHand = document.querySelector('.min-hand');
-  const hourHand = document.querySelector('.hour-hand');
+    const secondsHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
 
-  function setDate(){
-    const now = new Date();
+    function setDate(){
+      let now = new Date();
+      let seconds = now.getSeconds();
+      let secondsDeg = ((seconds/60) * 360) + 90;
 
-    const seconds = now.getSeconds();
-    const minutes = now.getMinutes();
-    const hours = now.getHours();
+      secondsHand.style.transform =`rotate(${secondsDeg}deg)`;
 
-    const secondDegrees = ((seconds / 60 ) * 360) + 90;
-    const minuteDegrees = ((minutes / 60 ) * 360) + 90;
-    const hourDegrees = ((hours / 12 ) * 360) + 90;
+      let minutesDeg = ((now.getMinutes()/60) * 360) + 90;
+
+      minHand.style.transform = `rotate(${minutesDeg}deg)`;
+
+      let hour = now.getHours();
+
+      let hourDeg = ((hour/12) * 360) + 90;
+
+
+      hourHand.style.transform = `rotate(${hourDeg}deg)`;
+
+    }
+
+
+    setInterval(setDate,1000);
 
 
 
-
-    secondHand.style.transform = `rotate(${secondDegrees}deg)`;
-    minuteHand.style.transform = `rotate(${minuteDegrees}deg)`;
-    hourHand.style.transform = `rotate(${hourDegrees}deg)`;
-    // console.log(seconds);
-  }
-
-  setInterval(setDate,1000);
 
 
 
