--- a/13 - Slide in on Scroll/index-START.html
+++ b/13 - Slide in on Scroll/index-START.html
@@ -43,6 +43,7 @@
   </div>
 
   <script>
+
     function debounce(func, wait = 20, immediate = true) {
       var timeout;
       return function() {
@@ -57,6 +58,24 @@
         if (callNow) func.apply(context, args);
       };
     }
+
+    const sliderImages = document.querySelectorAll('.slide-in');
+
+    function checkSlide(e){
+
+      sliderImages.forEach((img) => {
+        const slideInAt = (window.scrollY - window.innerHeight) - img.height / 2;
+        const imageBottom = img.offsetTop + img.height;
+        const isHalfShwon =
+        const isNotScrolledPast =
+
+         
+      })
+    };
+
+    window.addEventListener('scroll', debounce(checkSlide));
+
+
 
   </script>
 
