--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -101,32 +101,44 @@
 <script>
   const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
 
+
+
+
   let lastChecked;
+  function handleCheck(e){
+      let inBetween = false;
+
+
+      if(e.shiftKey && this.checked){
+
+        checkboxes.forEach((checkbox) => {
+            if(checkbox === this || checkbox === lastChecked){
+              inBetween = !inBetween;
+            }
+
+            if(inBetween){
+              checkbox.checked = true;
+            }
+
+        });
+
+      }
 
 
 
-  function handleClick(e){
+      lastChecked = this;
 
-    let inBetween = false;
 
-    if(e.shiftKey && this.checked){
+}
 
-      checkboxes.forEach(checkbox => {
-        if(checkbox === this || checkbox === lastChecked){
-            inBetween = !inBetween;
-        }
 
-        if(inBetween){
-          checkbox.checked = true;
-        }
-      });
+// checkboxes.forEach( (checkbox) => checkbox.addEventListener('click', handleCheck));
 
-    }
+checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck))
 
-    lastChecked = this;
-  }
 
-  checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleClick))
+
+
 
 </script>
 </body>
