--- a/13 - Slide in on Scroll/index-START.html
+++ b/13 - Slide in on Scroll/index-START.html
@@ -43,41 +43,62 @@
   </div>
 
   <script>
-
-    function debounce(func, wait = 20, immediate = true) {
-      var timeout;
-      return function() {
-        var context = this, args = arguments;
-        var later = function() {
-          timeout = null;
-          if (!immediate) func.apply(context, args);
-        };
-        var callNow = immediate && !timeout;
-        clearTimeout(timeout);
-        timeout = setTimeout(later, wait);
-        if (callNow) func.apply(context, args);
-      };
-    }
-
-    const sliderImages = document.querySelectorAll('.slide-in');
-
-    function checkSlide(e){
-
-      sliderImages.forEach((img) => {
-        const slideInAt = (window.scrollY - window.innerHeight) - img.height / 2;
-        const imageBottom = img.offsetTop + img.height;
-        const isHalfShwon =
-        const isNotScrolledPast =
-
-         
-      })
+function debounce(func, wait = 20, immediate = true) {
+  var timeout;
+  return function() {
+    var context = this,
+      args = arguments;
+    var later = function() {
+      timeout = null;
+      if (!immediate) func.apply(context, args);
     };
+    var callNow = immediate && !timeout;
+    clearTimeout(timeout);
+    timeout = setTimeout(later, wait);
+    if (callNow) func.apply(context, args);
+  };
+  }
 
-    window.addEventListener('scroll', debounce(checkSlide));
+
+  const sliderImages = document.querySelectorAll('.slide-in');
+
+  window.addEventListener('scroll', debounce(checkSlideIn));
+
+  function checkSlideIn(e){
+
+    sliderImages.forEach((image) => {
+      //halfway through the image
+      const slideInAt = (window.scrollY + window.innerHeight) - image.height / 2;
+
+      //scroller is past image top
+      const isHalfShown = image.offsetTop < slideInAt;
+
+      //image bottom
+      const imageBottom = image.offsetTop + image.height;
+
+      //scoller is not past image 
+      const isNotScrolledPast = window.scrollY < imageBottom;
+
+      if(isHalfShown && isNotScrolledPast ){
+        image.classList.add('active');
+      } else{
+        image.classList.remove('active');
+      }
 
 
 
-  </script>
+
+
+    });
+  }
+
+
+
+
+
+
+
+</script>
 
   <style>
     html {
