--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -26,13 +26,56 @@
   </div>
 
 <script>
-  const addItems = document.querySelector('.add-items');
-  const itemsList = document.querySelector('.plates');
-  const items = [];
+const form = document.querySelector(".add-items");
+form.addEventListener("submit", addItem);
 
+const plates = document.querySelector(".plates");
+
+const items = JSON.parse(localStorage.getItem("items")) || [];
+// localStorage.clear();
+populateList(items, plates);
+
+const checkBoxes = plates.addEventListener("click", toggleDone);
+
+function toggleDone(e) {
+  if (!e.target.matches("input")) return;
+  let input = e.target;
+  let index = input.dataset.index;
+
+  items[index].done = !items[index].done;
+  localStorage.setItem("items", JSON.stringify(items));
+}
+
+function addItem(e) {
+  e.preventDefault();
+  let text = this.querySelector("[name=item]").value;
+
+  let item = {
+    text: text,
+    done: false
+  };
+
+  items.push(item);
+  localStorage.setItem("items", JSON.stringify(items));
+  populateList(items, plates);
+  this.reset();
+}
+
+function populateList(items, plates) {
+  plates.innerHTML = items
+    .map(
+      (plate, i) =>
+        `<li>
+        <input type="checkbox" data-index=${i} id="item${i}" ${
+          plate.done ? "checked" : ""
+        } />
+        <label for="item${i}"> ${plate.text} <label>
+        </li>`
+    )
+    .join("");
+}
 </script>
 
 
 </body>
 </html>
-
