--- a/26 - Stripe Follow Along Nav/index-START.html
+++ b/26 - Stripe Follow Along Nav/index-START.html
@@ -214,6 +214,55 @@
 </style>
 
 <script>
+const triggers = document.querySelectorAll(".cool > li");
+const background = document.querySelector(".dropdownBackground");
+const nav = document.querySelector(".top");
+
+function handleEnter() {
+  this.classList.add("trigger-enter");
+
+  // After 150 ms activate trigger-enter-active(opacity)
+  setTimeout(
+    () =>
+      this.classList.contains("trigger-enter") &&
+      this.classList.add("trigger-enter-active"),
+
+    150
+  );
+
+  background.classList.add("open");
+
+  //identify the type of dropdown
+  const dropdown = this.querySelector(".dropdown");
+
+  //get dropdown rectangle coordinates
+  const dropdownCoords = dropdown.getBoundingClientRect();
+
+  //get nav coordinates
+  const navCoords = nav.getBoundingClientRect();
+
+  const coords = {
+    height: dropdownCoords.height,
+    width: dropdownCoords.width,
+    top: dropdownCoords.top - navCoords.top,
+    left: dropdownCoords.left - navCoords.left
+  };
+
+  background.style.setProperty("width", `${coords.width}px`);
+  background.style.setProperty("height", `${coords.height}px`);
+  background.style.setProperty(
+    "transform",
+    `translate(${coords.left}px, ${coords.top}px`
+  );
+}
+
+function handleLeave() {
+  this.classList.remove("trigger-enter", "trigger-enter-active");
+  background.classList.remove("open");
+}
+
+triggers.forEach(el => el.addEventListener("mouseenter", handleEnter));
+triggers.forEach(el => el.addEventListener("mouseleave", handleLeave));
 </script>
 
 </body>
